--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,7 +1,10 @@
 <div class="row">
     <div class="col-xs-12 col-sm-4">
       <ul class="list-group">
-        <li          
+        <li
+          [routerLink]="['/servers',5,'edit']"
+          [queryParams]="{allowEdit: '1'}"
+          fragment="loading"
           class="list-group-item"
           *ngFor="let server of servers">
           {{ server.name }}
