add child routes (nested) routes servers in appmodule and remove app-edit componenet and replace with router outlet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
           <a class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active" routerLink="/servers">Servers</a>
+          <a class="nav-link" routerLinkActive="active" routerLink="servers">Servers</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLinkActive="active" [routerLink]="['users']">Users</a>
